--- a/public/css/layout/mensajes_empresa.css
+++ b/public/css/layout/mensajes_empresa.css
@@ -1,5 +1,3 @@
-/* mensajes.css */
-
 .mensajes-lista {
     max-width: 800px;
     margin: 20px auto;
@@ -10,7 +8,7 @@
     background-color: #f9f9f9;
     border-radius: 6px;
     margin-bottom: 10px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .mensaje-item strong {
@@ -33,7 +31,7 @@
     display: inline-block;
     margin-top: 5px;
     text-decoration: none;
-    color: #007BFF;
+    color: #007bff;
     font-weight: bold;
     transition: color 0.2s;
 }
@@ -47,7 +45,7 @@ hr {
     border-top: 1px solid #eee;
     margin: 10px 0;
 }
-/* Botones de mensajes */
+
 .botones-mensajes button {
     background-color: #f0f0f0;
     border: 1px solid #f0f0f0;
@@ -59,14 +57,12 @@ hr {
     transition: background-color 0.2s, color 0.2s;
 }
 
-/* Hover */
 .botones-mensajes button:hover {
     background-color: #e0e0e0;
 }
 
-/* Activo */
 .botones-mensajes button.active {
-    background-color: #ff914d; /* naranja */
+    background-color: #ff914d;
     color: white;
     border-color: #ff914d;
 }
