--- a/public/css/paginas/busqueda.css
+++ b/public/css/paginas/busqueda.css
@@ -73,7 +73,7 @@ body {
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -87,36 +87,36 @@ body {
 
 .rating {
     display: flex;
-    flex-direction: row-reverse; 
-    justify-content: center; 
+    flex-direction: row-reverse;
+    justify-content: center;
     gap: 5px;
 }
 
 
 .rating input {
-    display: none; 
+    display: none;
 }
 
 .rating label {
     font-size: 30px;
-    color: #ccc; 
+    color: #ccc;
     cursor: pointer;
     transition: color 0.2s;
 }
 
 .rating label:hover,
-.rating label:hover ~ label {
+.rating label:hover~label {
     color: gold;
 }
 
-.rating input:checked ~ label {
+.rating input:checked~label {
     color: gold;
 }
 
 .btn-filtrar {
     background-color: #ff914d;
     color: #fff;
-    font-family: 'Lexend', sans-serif; 
+    font-family: 'Lexend', sans-serif;
     font-size: 16px;
     padding: 10px 15px;
     border: none;
@@ -128,26 +128,27 @@ body {
 .btn-filtrar:hover {
     background-color: #ff7a1a;
 }
+
 .rating-todas {
     text-align: center;
     margin-top: 10px;
 }
 
 .rating-todas label {
-    font-size: 16px; 
-    color: #333;      
+    font-size: 16px;
+    color: #333;
     cursor: pointer;
     transition: color 0.2s;
 }
 
-.rating-todas input:checked + label {
-    font-weight: bold;  
+.rating-todas input:checked+label {
+    font-weight: bold;
 }
 
 
-.rating-todas input:checked + label {
-    color: #333;     
-    font-weight: bold; 
+.rating-todas input:checked+label {
+    color: #333;
+    font-weight: bold;
 }
 
 .rating-todas label:hover {
