--- a/public/css/paginas/cliente/perfil_cliente.css
+++ b/public/css/paginas/cliente/perfil_cliente.css
@@ -35,21 +35,21 @@ body {
 }
 
 .foto-circulo {
-    width: 100px;        
+    width: 100px;
     height: 100px;
-    border-radius: 50%;  
-    overflow: hidden;     
+    border-radius: 50%;
+    overflow: hidden;
     display: flex;
-    align-items: center;  
+    align-items: center;
     justify-content: center;
-    background-color: #ddd; 
+    background-color: #ddd;
     cursor: pointer;
 }
 
 .foto-circulo img {
     width: 100%;
     height: 100%;
-    object-fit: cover;   
+    object-fit: cover;
 }
 
 
@@ -196,15 +196,12 @@ body {
 }
 
 .aviso-editar {
-    display: none; /* ya lo tenías oculto por defecto */
-    color: #555;   /* opcional: color más suave */
-    font-size: 0.85rem; /* tamaño pequeño */
-    margin-top: 5px;    /* separación del input */
-    display: block;     /* se mostrará cuando se edite */
+    display: none;
+    color: #555;
+    font-size: 0.85rem;
+    margin-top: 5px;
+    display: block;
 }
-
-
-
 
 @media (max-width: 900px) and (min-width: 700px) {
     .perfil-box {
@@ -222,7 +219,7 @@ body {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        flex-wrap: wrap; 
+        flex-wrap: wrap;
         gap: 15px;
         width: auto;
         margin: 0;
