--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,7 @@ body,
 html {
     margin: 0;
     padding: 0;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Playfair-display', serif;
 }
 
 .hero {
